--- a/Umbraco.Demo.Task/.gitignore
+++ b/Umbraco.Demo.Task/.gitignore
@@ -462,15 +462,15 @@ appsettings-schema.json
 appsettings-schema.*.json
 
 # Packages created from the backoffice (package.xml/package.zip)
-/umbraco/Data/CreatedPackages/
+#/umbraco/Data/CreatedPackages/
 
 # Temp folder containing Examine indexes, NuCache, MediaCache, etc.
-/umbraco/Data/TEMP/
+#/umbraco/Data/TEMP/
 
 # SQLite database files
-/umbraco/Data/*.sqlite.db
-/umbraco/Data/*.sqlite.db-shm
-/umbraco/Data/*.sqlite.db-wal
+# /umbraco/Data/*.sqlite.db
+# /umbraco/Data/*.sqlite.db-shm
+# /umbraco/Data/*.sqlite.db-wal
 
 # Log files
 /umbraco/Logs/
